# CasperLabs-Solana-bridge

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json
Bridge/: Cargo.toml
Bridge/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
Bridge/tests/: lib.rs
WPOKT/: Cargo.toml
WPOKT/src/: error.rs  instruction.rs  processor.rs  state.rs
WPOKT/tests/: lib.rs
WPokt/: Cargo.toml
WPokt/src/: error.rs  instruction.rs  processor.rs  state.rs
programs/Bridge/: Cargo.toml
programs/Bridge/src/: lib.rs
programs/Migrations/: Cargo.toml
programs/Migrations/src/: lib.rs
programs/WPOKT/: Cargo.toml
programs/WPOKT/src/: lib.rs
programs/WPokt/: Cargo.toml
programs/WPokt/src/: lib.rs
src/client/: WPokt.ts  bridge.ts  main.ts  state.ts  utils.ts  w_pokt.ts  wpokt.ts
src/client/Bridge/: bridge.ts  instructions.ts  state.ts
src/client/WPOKT/: instructions.ts  state.ts  w_pokt.ts  wpokt.ts
src/client/WPokt/: instructions.ts  state.ts  w_pokt.ts
src/program/Bridge/: Cargo.toml
src/program/Bridge/src/: error.rs  instruction.rs  processor.rs  state.rs
src/program/Bridge/tests/: lib.rs
src/program/WPOKT/: Cargo.toml
src/program/WPOKT/src/: error.rs  instruction.rs  processor.rs  state.rs
src/program/WPOKT/tests/: lib.rs
src/program/WPokt/: .gitignore  Cargo.toml
src/program/WPokt/src/: error.rs  instruction.rs  processor.rs  state.rs
tests/: Bridge.ts
