[package]
name = "w_pokt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.9.5"
borsh = "0.9"
spl-token-2022 = {version = "0.2.0" , features  = ["no-entrypoint"] }
arrayref = "0.3.6"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.9.5"
solana-sdk = "1.9.5"

[lib]
crate-type = ["cdylib", "lib"]
name ="w_pokt"